--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewCommentBox.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewCommentBox.scss
@@ -14,6 +14,7 @@
 		@include m.dead-center();
 		border: 1px solid black;
 		outline: none;
+		border-radius: v.$base-buttton-border-radius;
 		// This background color should only appear if there was a problem
 		// ...assigning a different background color to this element.
 		// ...the scss for the colors assigned are in home.scss
