--- a/client/src/CSS/scss_partials/authentication/_registerLogin.scss
+++ b/client/src/CSS/scss_partials/authentication/_registerLogin.scss
@@ -26,12 +26,28 @@
 
 	.title {
 		margin-bottom: 25px;
+		font-size: 30px;
+	}
+
+	.form__pair-container {
+		// Keeps other elements with float left from intruding between contents
+		display: inline-block;
+		width: 100%;
+	}
+
+	.form__pair-container__single-container {
+		float: left;
+		width: 46%;
+	}
+
+	.form__pair-container__single-container--right {
+		float: right;
 	}
 
 	.form__label {
 		float: left;
 		margin-top: 5px;
-		text-align: left;
+		font-size: 16px;
 	}
 
 	.form__text-input {
@@ -39,6 +55,7 @@
 		margin-bottom: 5px;
 		outline: none;
 		border: 1px solid gray;
+		border-radius: v.$form-input-border-radius;
 		box-sizing: border-box;
 		background-color: #e5e5e5;
 		padding: 8px;
@@ -63,6 +80,7 @@
 		margin-bottom: 5px;
 		outline: none;
 		border: 0;
+		border-radius: v.$base-buttton-border-radius;
 		background-color: v.$light-blue-teal;
 		padding: 10px;
 		width: 100%;
