--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/_deleteModal.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/_deleteModal.scss
@@ -57,6 +57,7 @@
 	.centered-buttons-container__delete {
 		float: left;
 		border: 1px solid black;
+		border-radius: v.$base-buttton-border-radius;
 		background-color: v.$dark-red;
 		// Only top and bottom because of inconsistencies
 		// ...with button vs divs.
@@ -78,6 +79,7 @@
 	.centered-buttons-container__cancel {
 		float: right;
 		border: 1px solid black;
+		border-radius: v.$base-buttton-border-radius;
 		background-color: #e7e7e7;
 		// Only top and bottom because of inconisistencies
 		// ...with button and div padding.
