--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
@@ -82,11 +82,12 @@
 		margin-bottom: v.$form-input-margin-bottom;
 		outline: none;
 		border: 1px solid gray;
+		border-radius: v.$form-input-border-radius;
 		box-sizing: border-box;
 		background-color: #e5e5e5;
 		padding: v.$create-item-sidebar-padding;
 		width: 100%;
-		font-size: v.$create-item-sidebar-text-input-font-size;
+		font-size: v.$item-form-text-input-font-size;
 		font-family: Arial, Helvetica, sans-serif;
 	}
 
@@ -101,12 +102,13 @@
 		margin-bottom: v.$form-input-margin-bottom;
 		outline: none;
 		border: 1px solid gray;
+		border-radius: v.$form-input-border-radius;
 		background-color: v.$light-gray;
 		padding: 4px v.$create-item-sidebar-padding 4px
 			v.$create-item-sidebar-padding;
 		height: 150px;
 		width: 100%;
-		font-size: v.$create-item-sidebar-text-input-font-size;
+		font-size: v.$item-form-text-input-font-size;
 		line-height: v.$common-line-height;
 		font-family: Arial, Helvetica, sans-serif;
 	}
@@ -151,6 +153,7 @@
 		margin-bottom: 15px;
 		outline: none;
 		border: 0;
+		border-radius: v.$base-buttton-border-radius;
 		// This background color should only appear if there was a problem
 		// ...assigning a different background color to this element.
 		// ...the scss for the colors assigned are in home.scss
