--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewEditItemInfo.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewEditItemInfo.scss
@@ -113,7 +113,8 @@
 
 	.form-buttons-outer-container {
 		position: relative;
-		height: 55px;
+		margin-bottom: 10px;
+		height: 50px;
 		width: 100%;
 	}
 
@@ -180,11 +181,6 @@
 		pointer-events: none;
 	}
 
-	.bottom-form-errors-container {
-		margin-top: 5px;
-		height: 5px;
-	}
-
 	.form-errors {
 		display: block;
 		margin-top: 10px;
@@ -195,5 +191,25 @@
 	.form-errors--item-name {
 		margin: 15px 0px 11px 0px;
 		font-size: v.$slightly-larger-font-size;
+	}
+
+	.form-errors--edit-item {
+		// So span can be placed after outer-diving-containers yet not take up
+		// ...space unless text is present the span
+		float: left;
+		margin: 0px 0 0px 0;
+		width: 100%;
+		// Using line height instead of margin so the span does not take up space
+		// ...unless there is actaully text present inside it
+		line-height: 30px;
+		text-align: center;
+	}
+
+	.form-errors--comment {
+		margin: 5px 0 5px 0;
+	}
+
+	.form-errors--edit-comment {
+		margin: 0 0 10px 0;
 	}
 }
