--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -21,7 +21,7 @@ html, body {
   border: 5px solid black;
   background-color: white;
   padding: 25px;
-  width: 500px;
+  width: 400px;
   text-align: center;
   font-family: Verdana, Geneva, sans-serif;
 }
@@ -1221,6 +1221,7 @@ dropdown can overlap all other components
 }
 .item-container-component .comment__centering-container {
   position: relative;
+  margin-bottom: 20px;
   height: 40px;
   width: 100%;
 }
@@ -1258,10 +1259,6 @@ dropdown can overlap all other components
 }
 .item-container-component .comment__centering-container__pair-container__cancel-button:hover, .item-container-component .comment__centering-container__pair-container__cancel-button:active {
   background-color: #dad9d9;
-}
-.item-container-component .edit-comment-form-errors-container {
-  display: relative;
-  margin: 15px 0px 20px 0px;
 }
 
 .item-container-component .item-name {
@@ -1403,7 +1400,8 @@ dropdown can overlap all other components
 }
 .item-container-component .form-buttons-outer-container {
   position: relative;
-  height: 55px;
+  margin-bottom: 10px;
+  height: 50px;
   width: 100%;
 }
 .item-container-component .form-buttons-centered-container {
@@ -1462,10 +1460,6 @@ dropdown can overlap all other components
   color: #bfbfbf;
   pointer-events: none;
 }
-.item-container-component .bottom-form-errors-container {
-  margin-top: 5px;
-  height: 5px;
-}
 .item-container-component .form-errors {
   display: block;
   margin-top: 10px;
@@ -1475,6 +1469,19 @@ dropdown can overlap all other components
 .item-container-component .form-errors--item-name {
   margin: 15px 0px 11px 0px;
   font-size: 16px;
+}
+.item-container-component .form-errors--edit-item {
+  float: left;
+  margin: 0px 0 0px 0;
+  width: 100%;
+  line-height: 30px;
+  text-align: center;
+}
+.item-container-component .form-errors--comment {
+  margin: 5px 0 5px 0;
+}
+.item-container-component .form-errors--edit-comment {
+  margin: 0 0 10px 0;
 }
 
 .item-container-list-sidebar-component,
